12/22/11 #3198, simplify FaucetSliderNode, behavior unchanged for existing clients
12/22/11 #3197, add sim-sharing to FaucetNode
12/22/11 #3196, add sim-sharing to HSliderNode and VSliderNode
12/21/11 FaucetNode fixes #3192 and #3193
12/20/11 #3175, more refinements to sim-sharing drag handlers
12/20/11 add PiccoloPhetResources, convenience singleton for accessing piccolo-phet jar resources
12/19-11 #3189, Added "setCursor" method to CursorHandler
12/13/11 #3175, overhaul sim-sharing drag handlers to support optional functions for start/end/drag
12/12/11 Added RichPNode and methods to facilitate layouts
12/12/11 Fixed PhetTabbedPane's TabPane handling of tab removal for visibility and re-layout
12/6/11 #3170, change ConductivityTesterNode so that separate sim-sharing args can be provided to positive and negative probes
12/5/11 #3170, #3175 add sim-sharing to conductivity tester by converting probe drag handlers to subclass of SimSharingDragSequenceHandler
12/5/11 #3175 switch to subclassing for sim-sharing drag handlers
12/5/11 #3175, add "object" parameter to sim-sharing drag handlers
12/5/11 Added a speedometer
12/5/11 Added a getter to make it possible to override backgrounds
12/2/11 #3136, move piccolo-phet string literals to sim-sharing object/action/parameter classes
12/1/11 Require PieChartNode entries to be non-negative
11/30/11 workaround for JVM crash on Mac, caused when slices of PieChartNode sum to zero
11/30/11 #3169, provide support for common forms of alignment in Box nodes
11/16/2011 Factored out non-interactive parent class of InjectorNode to facilitate reusability
11/16/2011 Removed unused parameter from InjectorNode constructor
11/2/2011 Fixed ComboBoxNode constructor cascading, see #3146
11/1/2011 fix for #3141, only dismiss ComboBoxNode popup if it was actually visible
11/1/2011 Changed from SimSharingProperty to track UI control changes, see #3136
10/16/2011 Extracted SensorNode superclass from VelocitySensorNode for reuse in plate-tectonics