@@ -1,3 +1,4 @@
+Changes to FPAFFaucetNode, required by cleanup of FaucetNode base class, see #3199
 # 0.00.46 (58668) Nov 16, 2011
 # 0.00.45 (58667) Nov 16, 2011
 # 0.00.44 (58665) Nov 16, 2011
